tests/rosetta/out/Pascal/4-rings-or-4-squares-puzzle.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/4-rings-or-4-squares-puzzle.pas
4-rings-or-4-squares-puzzle.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Variant>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(40,16) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(41,20) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(42,20) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(43,16) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(44,15) Note: Call to subroutine "operator =(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(44,39) Note: Call to subroutine "operator =(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(44,64) Note: Call to subroutine "operator =(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(54,39) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(54,42) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(54,45) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(54,48) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(54,51) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(54,54) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(54,57) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(61,10) Note: Call to subroutine "operator =(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
4-rings-or-4-squares-puzzle.pas(85,12) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
4-rings-or-4-squares-puzzle.pas(86,7) Error: Ordinal expression expected
4-rings-or-4-squares-puzzle.pas(88,9) Error: Ordinal expression expected
4-rings-or-4-squares-puzzle.pas(90,11) Error: Ordinal expression expected
4-rings-or-4-squares-puzzle.pas(93,13) Error: Ordinal expression expected
4-rings-or-4-squares-puzzle.pas(95,15) Error: Ordinal expression expected
4-rings-or-4-squares-puzzle.pas(106,30) Error: Operator is not overloaded: "<procedure variable type of function(Variant):LongInt is nested;Register>" + "ShortInt"
4-rings-or-4-squares-puzzle.pas(114,36) Error: Incompatible type for arg no. 2: Got "<procedure variable type of function(Variant):LongInt is nested;Register>", expected "Variant"
4-rings-or-4-squares-puzzle.pas(13,19) Warning: function result variable of a managed type does not seem to be initialized
4-rings-or-4-squares-puzzle.pas(130) Fatal: There were 8 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
